# cyberforce-2022-website

./: Cargo.toml
html/: admin.html  contact.html  home.html  logged_in.html  login.html  login_fail.html  manufacturing.html  solar.html  thank_you.html
src/: main.rs
